--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -15,5 +15,6 @@
         <TextBox x:Name="dateTextBox" Grid.Row="1" Margin="10" />
         <Button Content="Определить знак зодиака" Grid.Row="2" Margin="0,10,0,0" Click="Button_Click" HorizontalAlignment="Center" VerticalAlignment="Top" Width="202" Height="31"/>
         <TextBlock x:Name="Result" Grid.Row="2" Margin="10" TextWrapping="Wrap" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        <Image Source="/Знаки_зодиака3.jpg" Stretch="Fill" Grid.RowSpan="3" Opacity="0.1"/>
     </Grid>
 </Window>
